fix: visible regestry

--- a/src/contentscript/overlay/root/components/Profile/HeaderLogIn/HeaderLogIn.module.scss
+++ b/src/contentscript/overlay/root/components/Profile/HeaderLogIn/HeaderLogIn.module.scss
@@ -143,7 +143,7 @@
 .headerWrapperIsOpen {
   position: relative;
   z-index: 10;
-  left: -27px;
+  left: 0;
   top: 40px;
   display: flex;
   flex-direction: column;
